--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script src='http://api.map.baidu.com/api?v=2.0&ak=KSKGSa6No8AaippoVoRWzCGuffyBWvD3&callback=init'></script>
   </body>
 </html>
