--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
     <!-- built files will be auto injected -->
 
     <script src='http://api.map.baidu.com/api?v=2.0&ak=KSKGSa6No8AaippoVoRWzCGuffyBWvD3&callback=init'></script>
+    <script>
+        var originTitle = document.title;
+        var titleTime;
+        document.addEventListener("visibilitychange", function() {
+            if (document.hidden) {
+                document.title = "澳门首家线上赌场美女荷官在线发牌" + originTitle;
+                clearTimeout(titleTime);
+            }
+            else {
+                document.title = "(*´∇｀*) 被你发现啦~ " + originTitle;
+                titleTime = setTimeout(function() {
+                    document.title = originTitle;
+                }, 2000);
+            }
+        })
+    </script>
   </body>
 </html>
