--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 
     <script src='http://api.map.baidu.com/api?v=2.0&ak=KSKGSa6No8AaippoVoRWzCGuffyBWvD3&callback=init'></script>
     <script>
-        var originTitle = document.title;
-        var titleTime;
-        document.addEventListener("visibilitychange", function() {
-            if (document.hidden) {
-                document.title = "澳门首家线上赌场美女荷官在线发牌" + originTitle;
-                clearTimeout(titleTime);
-            }
-            else {
-                document.title = "(*´∇｀*) 被你发现啦~ " + originTitle;
-                titleTime = setTimeout(function() {
-                    document.title = originTitle;
-                }, 2000);
-            }
-        })
+        // var originTitle = document.title;
+        // var titleTime;
+        // document.addEventListener("visibilitychange", function() {
+        //     if (document.hidden) {
+        //         document.title = "澳门首家线上赌场美女荷官在线发牌" + originTitle;
+        //         clearTimeout(titleTime);
+        //     }
+        //     else {
+        //         document.title = "(*´∇｀*) 被你发现啦~ " + originTitle;
+        //         titleTime = setTimeout(function() {
+        //             document.title = originTitle;
+        //         }, 2000);
+        //     }
+        // })
     </script>
   </body>
 </html>
