--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
-    <script src='http://api.map.baidu.com/api?v=2.0&ak=KSKGSa6No8AaippoVoRWzCGuffyBWvD3&callback=init'></script>
+    <!-- <script src='http://api.map.baidu.com/api?v=2.0&ak=KSKGSa6No8AaippoVoRWzCGuffyBWvD3&callback=init'></script> -->
+    <script src="https://unpkg.com/vue-baidu-map"></script>
     <script>
         // var originTitle = document.title;
         // var titleTime;
